--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,13 +82,14 @@ h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 1);
 }
 
 #header h2 span {
   color: #fff;
   border-bottom: 2px solid #f7722b;
   padding-bottom: 6px;
+  text-shadow: 1px 1px #0515f1;
 }
 
 #header img {
